examples/c/error-codes/violates-constraint/fatal/CV-TEG1-bad-static.output
CV-TEG1-bad-static.c:2:67: error: type 'int' in generic association compatible with previously specified type 'int'
      return _Generic( 'a', char: 1, int: 2, long: 3, default: 0, signed int: 4) != 2;
                                                                  ^~~~~~~~~~
CV-TEG1-bad-static.c:2:38: note: compatible type 'int' specified here
      return _Generic( 'a', char: 1, int: 2, long: 3, default: 0, signed int: 4) != 2;
                                     ^~~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
